# MACS

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  00README  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  INSTALL.rst  LICENSE  MANIFEST.in  NEW_IN_MACS14  PKG-INFO  README  README.md  README.rst  TODO  _config.yml  calmaxtagExampleUse  johnREADME  make_docker.sh  make_docker_base.sh  make_docker_macs.sh  pyproject.toml  requirements.txt  setup.py  setup_w_cython.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md  windows_issues.md
.github/workflows/: build-and-test-MACS2-macos12.yml  build-and-test-MACS2-non-x64.yml  build-and-test-MACS2-x64.yml  build-and-test-MACS3-macos.yml  build-and-test-MACS3-macos12.yml  build-and-test-MACS3-non-x64-others.yml  (+8 more)
DEBIAN/: README.Debian  builddeb.sh  changelog  control  copyright  docs  macs.man  menu  rules
DOCKER/: Dockerfile  Dockerfile-release  Dockerfile-slim  README.md
MACS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MACS2/: ComputePileups.pyx  Constants.py  OptValidator.py  OptValidatorDiff.py  OutputWriter.py  PeakDetect.c  PeakDetect.pyx  PeakModel.c  PeakModel.py  PeakModel.pyx  Pileup.c  Pileup.pyx  Poisson.c  Poisson.pyx  Prob.c  Prob.pyx  Signal.c  Signal.pyx  Statistics.c  Statistics.pyx  bdgbroadcall.py  bdgbroadcall_cmd.py  bdgcmp.py  bdgcmp_cmd.py  bdgdiff.py  bdgdiff_cmd.py  bdgopt.py  bdgopt_cmd.py  bdgpeakcall.py  bdgpeakcall_cmd.py  cArray.c  cArray.pyx  cFilterPE.c  cFilterPE.pyx  cPeakDetect.c  cPeakDetect.pyx  cPeakModel.c  cPeakModel.pyx  cPileup.c  cPileup.pyx  (+37 more)
MACS3/: Constants.py  OptValidator.py  OutputWriter.py  PeakDetect.pyx  PeakModel.c  PeakModel.pyx  Pileup.c  Pileup.pyx  Prob.pyx  README.md  Signal.c  Signal.pyx  Statistics.pyx  __init__.py  bdgbroadcall_cmd.py  bdgcmp_cmd.py  bdgdiff_cmd.py  bdgopt_cmd.py  cPosValCalculation.c  cPosValCalculation.h  cPosValCalculation.pxd  callpeak_cmd.py  cmbreps_cmd.py  diffpeak_cmd.py  filterdup_cmd.py  khash.h  pileup_cmd.py  predictd_cmd.py  randsample_cmd.py  refinepeak_cmd.py
Part1/: ManipulateData.py  Part1.sh  README.md  getData.py  getWeights.py
_layouts/: default.html
docs/: Advanced_Step-by-step_Peak_Calling.md  INSTALL.md  bdgbroadcall.md  bdgcmp.md  bdgdiff.md  bdgopt.md  bdgpeakcall.md  callpeak.md  callvar.md  cmbreps.md  filterdup.md  hmmratac.md  pileup.md  predictd.md  randsample.md  refinepeak.md
lib/: Constants.py  OptValidator.py  OutputWriter.py  PeakDetect.py  PeakModel.py  Prob.py  __init__.py  cPeakDetect.pyx  cPileup.pyx  cProb.pyx
scripts/: benchmark_bedgraph_mlx.py  benchmark_pileup_performance.py  benchmark_scoretrack_mlx.py
test/: CTCF_PE_CTRL_chr22_50k.bam.bai  CTCF_PE_ChIP_chr22_50k.bam.bai  Dockerfile  Dockerfile.i386.py36  Dockerfile.multiarch.base.buster.py37  Dockerfile.multiarch.install.macs3  barcodes.txt  callvar_testing.narrowPeak  chr1_ctl.wig  chr1_tr.wig  cmdlinetest  cmdlinetest-nohmmratac  cmdlinetest2  cmdlinetest_bdgdiff  cmdlinetest_narrowpeak  cmdlinetest_narrowpeak_pe  cmdlinetest_update  jaccard.py  large_training_lengths.txt  prockreport  pyprofile  pyprofile.sh  pyprofile_stat  pyrprofile  pyrprofile_stat  run_multiarch_tests.sh  small_prediction_data.txt  small_prediction_lengths.txt  small_prediction_results.txt  small_prediction_results_poisson.txt  test.sh  test1_peaks.bed  test1_scores.wig  test_BAMBAI.py  test_BedGraph.py  test_BedGraphIO.py  test_CallPeakUnit.py  test_FixWidthTrack.py  test_HMMR_HMM.py  test_HMMR_poisson.py  (+26 more)
(+352 files in other folders)
