[build-system]
requires=['setuptools>=68.0', 'numpy>=1.25', 'scipy>=1.12', 'cykhash>=2.0', 'Cython>=3.0', 'scikit-learn>=1.3', 'hmmlearn>=0.3.2']
build-backend = "setuptools.build_meta"

[project]
name = "MACS3"
dynamic = ["version"]
description = "Model Based Analysis for ChIP-Seq data"
authors = [{name = "Tao Liu", email = "vladimir.liu@gmail.com"},
	   {name = "Philippa Doherty", email = "Philippa.Doherty@RoswellPark.org"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers =['Development Status :: 5 - Production/Stable',
              'Environment :: Console',
              'Intended Audience :: Developers',
              'Intended Audience :: Science/Research',
              'License :: OSI Approved :: BSD License',
              'Operating System :: MacOS :: MacOS X',
              'Operating System :: POSIX',
              'Operating System :: Unix',
              'Topic :: Scientific/Engineering :: Bio-Informatics',
              'Programming Language :: Python :: 3.9',
              'Programming Language :: Python :: 3.10',
              'Programming Language :: Python :: 3.11',
              'Programming Language :: Python :: 3.12',
              'Programming Language :: Python :: 3.13',	      
              'Programming Language :: Cython']
dependencies = ["numpy>=1.25",
	        "scipy>=1.12",
             	"hmmlearn>=0.3.2",
                "scikit-learn>=1.3",
                "cykhash>=2.0"]

[project.urls]
Homepage = "https://https://macs3-project.github.io/MACS/"
Documentation = "https://https://macs3-project.github.io/MACS/"
Repository = "https://github.com/macs3-project/MACS/"
Issues = "https://github.com/macs3-project/MACS/issues"
Changelog = "https://github.com/macs3-project/MACS/blob/master/ChangeLog"
