[build-system]
requires=['setuptools>=80.0', 'numpy>=1.25', 'Cython>=3.0']
build-backend = "setuptools.build_meta"

[project]
name = "MACS3"
dynamic = ["version"]
description = "Model Based Analysis for ChIP-Seq data"
authors = [{name = "Tao Liu", email = "vladimir.liu@gmail.com"},
	   {name = "Philippa Doherty", email = "Philippa.Doherty@RoswellPark.org"}]
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
classifiers =['Development Status :: 5 - Production/Stable',
              'Environment :: Console',
              'Intended Audience :: Developers',
              'Intended Audience :: Science/Research',
              'Operating System :: MacOS :: MacOS X',
              'Operating System :: POSIX',
              'Operating System :: Unix',
              'Topic :: Scientific/Engineering :: Bio-Informatics',
              'Programming Language :: Python :: 3.12',
              'Programming Language :: Python :: 3.13',
              'Programming Language :: Python :: 3.14',	      
              'Programming Language :: Cython']
dependencies = ["numpy>=1.25",
                "scipy>=1.12",
                "pandas>=2.0",
                "anndata>=0.10",
                "hmmlearn>=0.3.2",
                "scikit-learn>=1.3",
                "cykhash>=2.0"]

[project.urls]
Homepage = "https://macs3-project.github.io/MACS/"
Documentation = "https://macs3-project.github.io/MACS/"
Repository = "https://github.com/macs3-project/MACS/"
Issues = "https://github.com/macs3-project/MACS/issues"
Changelog = "https://github.com/macs3-project/MACS/blob/master/ChangeLog"

[dependency-groups]
dev = ["pytest>=9.0"]
